kubernetes-grafana-Loki-prometheus-promtail/ingress-grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress-promethues
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: grafana.vishal-chauhan.in
    http:
      paths:
      - backend:
          service:
            name: prom-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
